[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/BGM.gd" type="Script" id=1]
[ext_resource path="res://Sound/Music/4326-scheming-weasel-faster-version-by-kevin-macleod.ogg" type="AudioStream" id=2]
[ext_resource path="res://Sound/Music/4604-wallpaper-by-kevin-macleod.ogg" type="AudioStream" id=3]

[node name="BGM" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayerOne" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0

[node name="AudioStreamPlayerTwo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[connection signal="finished" from="AudioStreamPlayerOne" to="." method="_on_AudioStreamPlayerOne_finished"]
[connection signal="finished" from="AudioStreamPlayerTwo" to="." method="_on_AudioStreamPlayerTwo_finished"]
